[JPRO-25] Build POC for Automated Testing using TestFX Framework (#1)
* Add JavaFX unit testing for the login view using TestFX framework

* Use `Monocle` to enable headless testing

* Move Maven Surefire plugin to the `pluginManagement` section

* Add required `javafx.swing` module for TestFX tests

* Update TestFX/Monocle module system related arguments

* Rename `org.testfx` module name to `org.testfx.core` and move surefire plugin under `kview` pom

* Disable temporary the `useModulePath` configuration for TestFX tests

* Create a mocked `users.ini` file for the tests